--- a/src/Components/header/header.css
+++ b/src/Components/header/header.css
@@ -1,24 +1,24 @@
-.form-header {
+.header {
   width: 100%;
   height: 50px;
   background-color: rgb(44, 190, 64);
   display: flex;
   justify-content: center;
 }
-.form-header ul {
+.header ul {
   display: flex;
   gap: 40px;
   align-items: center;
   padding: 0 50px;
 }
-.form-header ul li {
+.header ul li {
   list-style: none;
   text-decoration: none;
   display: flex;
   align-items: center;
   height: 100%;
 }
-.form-header ul li button {
+.header ul li button {
     height: 30px;
     width: 40px;
     border-radius: 5px;
